--- a/Achievement_2/exercise_2.6/src/recipes/templates/recipes/recipes_detail.html
+++ b/Achievement_2/exercise_2.6/src/recipes/templates/recipes/recipes_detail.html
@@ -43,9 +43,32 @@
         overflow: hidden;
         box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
       }
+      /* CSS styling for the logout button */
+      .logout-button {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        background-color: #d9534f;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 20px;
+        font-size: 16px;
+        font-weight: 700;
+        cursor: pointer;
+      }
+
+      .logout-button:hover {
+        background-color: #c9302c;
+      }
     </style>
   </head>
   <body>
+    <div class="logout-button">
+      <a href="{% url 'logout' %}" style="color: #fff; text-decoration: none"
+        >Logout</a
+      >
+    </div>
     <div class="container">
       <img
         src="{{ object.pic.url }}"
