--- a/Achievement_2/exercise_2.6/src/recipes/templates/recipes/recipes_home.html
+++ b/Achievement_2/exercise_2.6/src/recipes/templates/recipes/recipes_home.html
@@ -21,6 +21,7 @@
         position: relative;
         width: auto;
         height: auto;
+        margin-top: 50px;
       }
       .myButton {
         box-shadow: inset 0px 1px 0px 0px #efdcfb;
