--- a/Achievement_2/exercise_2.7/src/recipes/templates/recipes/recipes_detail.html
+++ b/Achievement_2/exercise_2.7/src/recipes/templates/recipes/recipes_detail.html
@@ -61,6 +61,63 @@
       .logout-button:hover {
         background-color: #c9302c;
       }
+      /* CSS styling for the form */
+      form {
+        text-align: center;
+        color: white;
+        margin-bottom: 40px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+
+      .form-item {
+        display: inline-block;
+        margin: 0 20px;
+        padding: 8px;
+        font-size: 16px;
+      }
+
+      select.form-item {
+        width: 200px;
+        padding: 8px;
+        font-size: 16px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        background-color: #fff;
+        cursor: pointer;
+      }
+
+      input[type="text"].form-item {
+        width: 200px;
+        padding: 8px;
+        font-size: 16px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        background-color: #fff;
+      }
+
+      button,
+      .clear-button,
+      .btn {
+        float: right;
+        padding: 10px 20px;
+        margin: auto;
+        font-family: Poppins, sans-serif;
+        font-size: 16px;
+        font-weight: 700;
+        text-align: center;
+        text-decoration: none;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      button:hover,
+      .clear-button:hover,
+      .btn:hover {
+        background-color: #0069d9;
+      }
     </style>
   </head>
   <body>
@@ -70,6 +127,12 @@
       >
     </div>
     <div class="container">
+      <form
+        action="{% url 'recipes:export_single_recipe_csv' object.id %}"
+        method="get"
+      >
+        <button type="submit" class="btn">Export as CSV</button>
+      </form>
       <img
         src="{{ object.pic.url }}"
         alt="{{ object.title }}"
