--- a/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_detail.html
+++ b/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_detail.html
@@ -4,121 +4,10 @@
 <html lang="en">
   <head>
     <!-- Head content here -->
-    <style>
-      /* CSS styling for the page */
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: "Poppins", sans-serif;
-        text-align: left;
-        background-image: url("{% static 'recipes/images/recipe-detail-background.jpg' %}");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        color: white;
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      }
-
-      /* CSS styling for the container */
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
-        background-color: rgba(0, 0, 0, 0.7);
-        border-radius: 12px;
-        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-      }
-
-      /* CSS styling for the image */
-      .recipe-image {
-        display: block;
-        margin: 0 auto;
-        width: 400px;
-        height: 265px;
-        object-fit: cover;
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-      }
-      /* CSS styling for the logout button */
-      .logout-button {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        background-color: #d9534f;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-        padding: 10px 20px;
-        font-size: 16px;
-        font-weight: 700;
-        cursor: pointer;
-      }
-
-      .logout-button:hover {
-        background-color: #c9302c;
-      }
-      /* CSS styling for the form */
-      form {
-        text-align: center;
-        color: white;
-        margin-bottom: 40px;
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      }
-
-      .form-item {
-        display: inline-block;
-        margin: 0 20px;
-        padding: 8px;
-        font-size: 16px;
-      }
-
-      select.form-item {
-        width: 200px;
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #000;
-        border-radius: 4px;
-        background-color: #fff;
-        cursor: pointer;
-      }
-
-      input[type="text"].form-item {
-        width: 200px;
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #000;
-        border-radius: 4px;
-        background-color: #fff;
-      }
-
-      button,
-      .clear-button,
-      .btn {
-        float: right;
-        padding: 10px 20px;
-        margin: auto;
-        font-family: Poppins, sans-serif;
-        font-size: 16px;
-        font-weight: 700;
-        text-align: center;
-        text-decoration: none;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-
-      button:hover,
-      .clear-button:hover,
-      .btn:hover {
-        background-color: #0069d9;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="{% static 'recipes/css/details_styles.css' %}"
+    />
   </head>
   <body>
     <div class="logout-button">
@@ -131,7 +20,12 @@
         action="{% url 'recipes:export_single_recipe_csv' object.id %}"
         method="get"
       >
-        <button type="submit" class="btn">Export as CSV</button>
+        <button
+          type="submit"
+          class="float-right bg-blue-500 mx-auto cursor-pointer no-underline font-semibold text-center hover:bg-blue-900 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"
+        >
+          Export as CSV
+        </button>
       </form>
       <img
         src="{{ object.pic.url }}"
