--- a/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_home.html
+++ b/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_home.html
@@ -1,67 +1,35 @@
-{% load static %}
+{% load static tailwind_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipes</title>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        background-image: url("{% static 'recipes/images/recipe-welcome.jpg' %}");
-        background-size: cover;
-        background-position: center;
-      }
-      .buttonContainer {
-        position: relative;
-        width: auto;
-        height: auto;
-        margin-top: 50px;
-      }
-      .myButton {
-        box-shadow: inset 0px 1px 0px 0px #efdcfb;
-        background: linear-gradient(to bottom, #dfbdfa 5%, #bc80ea 100%);
-        background-color: transparent;
-        border-radius: 1px;
-        border: 1px solid #c584f3;
-        display: inline-block;
-        cursor: pointer;
-        color: #ffffff;
-        font-family: "Poppins", sans-serif;
-        font-size: 20px;
-        font-weight: bold;
-        padding: 4px 4px;
-        text-decoration: none;
-        text-shadow: 0px 1px 0px #9752cc;
-        text-align: center;
-        margin-top: 200px;
-        position: sticky;
-        width: 150px;
-      }
-      .myButton:hover {
-        background-color: transparent;
-      }
-      .myButton:active {
-        position: relative;
-        top: 1px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="buttonContainer">
-      <ul>
-        {% for recipe in recipes %}
-        <li>
-          <a href="/recipes/{{ recipe.id }}">{{ recipe.title }}</a>
-        </li>
-        {% endfor %}
-      </ul>
-      <a href="/recipes/" class="myButton"> Go to recipes</a>
-    </div>
-  </body>
+{% tailwind_css %}
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Recipes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+  <link href="{% static 'recipes/css/styles.css' %}" rel="stylesheet" />
+  <script src="{% static 'recipes/js/recipes_home.js' %}"></script>
+</head>
+
+<body>
+  <div class="flex items-center justify-center w-screen h-screen">
+    <h1 class="grid items-center text-center text-9xl">
+      Recipes
+      <div class="text-2xl">
+        <button
+          class="px-4 py-2 mt-10 font-bold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline"
+          type="button" onclick="window.location.href='/recipes/'">
+          Go To Recipes
+        </button>
+    </h1>
+  </div>
+  </div>
+</body>
+
 </html>
