--- a/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_list.html
+++ b/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_list.html
@@ -1,284 +1,106 @@
-{% load static %}
+{% load static tailwind_tags %}{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipes</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-    <style>
-      /* CSS styling for the page */
-      body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: "Poppins", sans-serif;
-        background-image: url("{% static 'recipes/images/recipe-list-background.jpg' %}");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
+{% tailwind_css %}
 
-      /* CSS styling for images */
-      .recipe-list {
-        display: flex;
-        flex-wrap: wrap;
-        list-style: none;
-        padding: 0;
-        justify-content: center;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Recipes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+  <link type="text/css" href="{% static 'recipes/css/list_styles.css' %}" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
 
-      .recipe-item {
-        flex-basis: 400px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-      }
+<body class="flex bg-auto bgimage">
+  <div class="w-screen h-screen">
+    <!-- navigation -->
+    <nav class="flex mx-16 mt-8 bg-gray-800 border border-gray-500 dark:bg-gray-800">
+      <div class="flex justify-between w-full p-4">
+        <div class="lg:hidden">
+          <button id="menuBtn"
+            class="flex items-center px-3 py-2 text-white border border-blue-700 rounded hover:text-white ">
+            <svg class="w-3 h-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <title>Menu</title>
+              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+            </svg>
+          </button>
+        </div>
+        <ul id="menu"
+          class="flex-row hidden p-4 mt-0 space-x-8 font-medium rounded-lg lg:flex rtl:space-x-reverse dark:bg-gray-900 dark:border-gray-700">
+          <li>
+            <a href="{% url 'recipes_home' %}"
+              class="block p-0 px-3 py-2 text-white text-blue-700 rounded dark:text-white dark:text-blue-500"
+              aria-current="page">Home</a>
+          </li>
+          <li>
+            <a href="{% url 'about' %}"
+              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white dark:hover:bg-transparent">About</a>
+          </li>
+          <li>
+            <a href="{% url 'logout' %}"
+              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white dark:hover:bg-transparent">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-      .recipe-image-container {
-        position: relative;
-        width: 400px;
-        height: 265px;
-        margin-bottom: 20px;
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-      }
+    <script>
+      const menuBtn = document.getElementById('menuBtn');
+      const menu = document.getElementById('menu');
 
-      img.recipe-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+      menuBtn.addEventListener('click', function () {
+        menu.classList.toggle('hidden');
+      });
+    </script>
 
-      /* CSS styling for recipe titles */
-      .recipe-title-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: rgba(0, 0, 0, 0.7);
-        color: #fff;
-        font-size: 20px;
-        font-weight: bold;
-        opacity: 0;
-        transition: opacity 0.3s;
-      }
-
-      .recipe-image-container:hover .recipe-title-overlay {
-        opacity: 1;
-      }
-
-      /* CSS styling for the heading */
-      h1 {
-        text-align: center;
-        font-family: "Dancing Script", cursive;
-        font-size: 84px;
-        color: white;
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        margin-bottom: 20px;
-      }
-
-      /* CSS styling for the logout button */
-      .logout-button {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        background-color: #d9534f;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-        padding: 10px 20px;
-        font-size: 16px;
-        font-weight: 700;
-        cursor: pointer;
-      }
-
-      .logout-button:hover {
-        background-color: #c9302c;
-      }
-
-      /* CSS styling for the form */
-      form {
-        text-align: center;
-        color: white;
-        margin-bottom: 40px;
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      }
-
-      .form-item {
-        display: inline-block;
-        margin: 0 20px;
-        padding: 8px;
-        font-size: 16px;
-      }
-
-      select.form-item {
-        width: 200px;
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #000;
-        border-radius: 4px;
-        background-color: #fff;
-        cursor: pointer;
-      }
-
-      input[type="text"].form-item {
-        width: 200px;
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #000;
-        border-radius: 4px;
-        background-color: #fff;
-      }
-
-      /* CSS styling for the search button */
-      button,
-      .clear-button,
-      .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        margin: 0 20px;
-        font-family: Poppins, sans-serif;
-        font-size: 16px;
-        font-weight: 700;
-        text-align: center;
-        text-decoration: none;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-
-      button:hover,
-      .clear-button:hover,
-      .btn:hover {
-        background-color: #0069d9;
-      }
-
-      /* CSS for the custom ingredient dropdown */
-      .ingredient-dropdown {
-        position: relative;
-        display: inline-block;
-      }
-
-      .ingredient-select {
-        width: 200px;
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background-color: #fff;
-        cursor: pointer;
-      }
-
-      .ingredient-options {
-        display: none;
-        position: absolute;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
-        z-index: 1;
-      }
-
-      .ingredient-options.show {
-        display: block;
-      }
-
-      .ingredient-options label {
-        display: inline-block;
-        padding: 8px;
-        cursor: pointer;
-      }
-
-      .ingredient-options label:hover {
-        background-color: #f9f9f9;
-      }
-
-      .chart-container {
-        position: relative;
-        margin-bottom: 20px;
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-      }
-
-      .rounded-chart {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 12px;
-      }
-
-      .error-message {
-        color: red;
-        font-size: 20px;
-        font-weight: bold;
-        text-align: center;
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      }
-    </style>
-  </head>
-  <body>
-    <div class="logout-button">
-      <a href="{% url 'logout' %}" style="color: #fff; text-decoration: none"
-        >Logout</a
-      >
-    </div>
     <h1>Recipes</h1>
     <!-- Search Form -->
-    <form action="" method="GET">
-      {% csrf_token %}
-      <div class="form-item">
-        {{ form.Recipe_Name.label_tag }} {{ form.Recipe_Name }}
-      </div>
-      <div class="form-item">
-        {{ form.Ingredients.label_tag }} {{ form.Ingredients }}
-      </div>
-      <div class="form-item">
-        {{ form.chart_type.label_tag }} {{ form.chart_type }}
-      </div>
-      <button type="submit">Search</button>
-      <button type="button" id="clearButton" class="clear-button">Clear</button>
-      {% if form.data.Ingredients %}
-      <a
-        href="{% url 'recipes:export_csv' %}?Recipe_Name={{ form.data.Recipe_Name }}&Ingredients={{ form.data.Ingredients }}"
-        class="btn"
-        >Export as CSV</a
-      >
-      {% else %}
-      <a
-        href="{% url 'recipes:export_csv' %}?Recipe_Name={{ form.data.Recipe_Name }}"
-        class="btn"
-        >Export as CSV</a
-      >
-      {% endif %}
-    </form>
+    <div class="flex flex-wrap justify-center mx-16 mb-4 bg-gray-800 border border-gray-500 dark:bg-gray-800">
+      <form action="" method="GET" class="flex-row mt-6 mb-6 text-center text-white">
+        {% csrf_token %}
+        <div class="inline-block mx-5 text-lg form-item">
+          {{ form.Recipe_Name.label_tag }} {{ form.Recipe_Name }}
+        </div>
+        <div class="inline-block mx-5 text-lg">
+          {{ form.Ingredients.label_tag }} {{ form.Ingredients }}
+        </div>
+        <div class="inline-block mx-5 text-lg">
+          {{ form.chart_type.label_tag }} {{ form.chart_type }}
+        </div>
+        <button type="submit"
+          class="px-2 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-900 focus:outline-none focus:shadow-outline">
+          Search
+        </button>
+        <button type="button" id="clearButton"
+          class="px-2 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-900 focus:outline-none focus:shadow-outline">
+          Clear
+        </button>
+        {% if form.data.Ingredients %}
+        <a href="{% url 'recipes:export_csv' %}?Recipe_Name={{ form.data.Recipe_Name }}&Ingredients={{ form.data.Ingredients }}"
+          class="px-2 py-2 ml-auto font-bold text-white bg-blue-500 rounded hover:bg-blue-900 focus:outline-none focus:shadow-outline">Export
+          as CSV</a>
+        {% else %}
+        <a href="{% url 'recipes:export_csv' %}?Recipe_Name={{ form.data.Recipe_Name }}"
+          class="px-2 py-2 ml-20 font-bold text-white bg-green-500 rounded hover:bg-green-900 focus:outline-none focus:shadow-outline">Export
+          as CSV</a>
+        {% endif %}
+      </form>
+      <script>
+        document.querySelectorAll('.form-item input').forEach(function (input) {
+          input.style.color = 'black';
+        });
+      </script>
+    </div>
     <!-- Display the charts -->
     {% if chart_image %}
-    <div class="chart-container">
-      <img
-        src="data:image/png;base64,{{ chart_image | safe }}"
-        alt="Chart"
-        class="rounded-chart"
-      />
+    <div class="flex justify-center chart-container">
+      <img src="data:image/png;base64,{{ chart_image | safe }}" alt="Chart" class="rounded-chart" />
     </div>
     {% endif %}
     <!-- Display the error message -->
@@ -292,11 +114,7 @@
       <li class="recipe-item">
         <a href="{{ recipe.get_absolute_url }}">
           <div class="recipe-image-container">
-            <img
-              class="recipe-image"
-              src="{{ recipe.pic.url }}"
-              alt="{{ recipe.title }}"
-            />
+            <img class="recipe-image" src="{{ recipe.pic.url }}" alt="{{ recipe.title }}" />
             <div class="recipe-title-overlay">{{ recipe.title }}</div>
           </div>
         </a>
@@ -330,5 +148,7 @@
         }
       });
     </script>
-  </body>
+  </div>
+</body>
+
 </html>
