feat: add Add recipe form

--- a/Achievement_2/exercise_2.8/src/recipes/static/recipes/css/about.css
+++ b/Achievement_2/exercise_2.8/src/recipes/static/recipes/css/about.css
@@ -1,8 +1,14 @@
 .bgimage {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(50, 83, 61, 0.5)),
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(43, 34, 56, 0.5)),
     url("/static/recipes/images/about.jpg");
 }
 
 .font {
   font-family: "Poppins", sans-serif;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
