--- a/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_list.html
+++ b/Achievement_2/exercise_2.8/src/recipes/templates/recipes/recipes_list.html
@@ -35,16 +35,23 @@
           class="flex-row hidden p-4 mt-0 space-x-8 font-medium rounded-lg lg:flex rtl:space-x-reverse dark:bg-gray-900 dark:border-gray-700">
           <li>
             <a href="{% url 'recipes_home' %}"
-              class="block p-0 px-3 py-2 text-white text-blue-700 rounded dark:text-white dark:text-blue-500"
-              aria-current="page">Home</a>
+              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-transparent">
+              Home</a>
           </li>
           <li>
             <a href="{% url 'about' %}"
-              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white dark:hover:bg-transparent">About</a>
+              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-transparent">
+              About</a>
+          </li>
+          <li>
+            <a href="{% url 'recipes:recipes_list' %}"
+              class="block p-0 px-3 py-2 text-blue-700 rounded dark:text-blue-500">
+              Recipes</a>
           </li>
           <li>
             <a href="{% url 'logout' %}"
-              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white dark:hover:bg-transparent">Logout</a>
+              class="block p-0 px-3 py-2 text-gray-900 border-0 rounded hover:bg-gray-100 hover:bg-transparent hover:text-blue-700 dark:text-white dark:hover:text-blue-500 dark:hover:bg-transparent">
+              Logout</a>
           </li>
         </ul>
       </div>
@@ -53,7 +60,6 @@
     <script>
       const menuBtn = document.getElementById('menuBtn');
       const menu = document.getElementById('menu');
-
       menuBtn.addEventListener('click', function () {
         menu.classList.toggle('hidden');
       });
@@ -73,6 +79,11 @@
         <div class="inline-block mx-5 text-lg">
           {{ form.chart_type.label_tag }} {{ form.chart_type }}
         </div>
+        <script>
+          document.querySelectorAll('.inline-block select').forEach(function (select) {
+              select.style.color = 'black';
+          });
+      </script>
         <button type="submit"
           class="px-2 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-900 focus:outline-none focus:shadow-outline">
           Search
