feat: Add new recipe feature finished

--- a/Achievement_2/exercise_2.8/src/recipes/templates/recipes/about.html
+++ b/Achievement_2/exercise_2.8/src/recipes/templates/recipes/about.html
@@ -35,8 +35,7 @@
               aria-current="page">Home</a>
           </li>
           <li>
-            <a href="{% url 'about' %}"
-              class="block p-0 px-3 py-2 text-blue-700 rounded dark:text-blue-500">About</a>
+            <a href="{% url 'about' %}" class="block p-0 px-3 py-2 text-blue-700 rounded dark:text-blue-500">About</a>
           </li>
           <li>
             <a href="{% url 'recipes:recipes_list' %}"
@@ -85,7 +84,6 @@
             <p class="mt-9">Thanks a ton,</p>
             <p>Bryan Berkley</p>
           </div>
-          <!-- <a href="javascript:history.go(-1)" class="button-big">Back to BRE</a> -->
       </div>
       </section>
     </div>
